made some things responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="https://use.fontawesome.com/123bc09ff9.js"></script>
 <!--Google Fonts-->
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
+<!--Viewport-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -39,8 +41,10 @@
 
 <!--CONTENT-->
 	<section>
-		<img src="img/orange.jpg" alt="orange">
-		<div>
+		<div class="section-left">
+			<img src="img/orange.jpg" alt="orange">
+		</div>
+		<div class="section-right">
 			<h1>orangejuice™ use only the very best design fruits to create your <span>web</span> & <span>app</span> designs.</h1>
 			<button class="orange">GET A QUOTE</button>
 			<button class="teal">VIEW CASE STUDIES</button>
