media quiry fix

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</div>
 
 <!--CONTENT-->
-	<section>
+	<section class="no-wrap">
 		<div class="section-left">
 			<img src="img/orange.jpg" alt="orange">
 		</div>
